# sanayi-app

./: .gitignore  .npmrc  CLAUDE.md  README.md  feature-1.md  feature-2  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  style.css
naro-backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
naro-backend/alembic/: env.py
naro-backend/app/: main.py
naro-backend/scripts/: backfill_case_subtypes.py  export_openapi.py  heartbeat_mock_techs.py  release_orphan_tow_locks.py  render_api_readme.py  render_enums_catalog.py  run_media_smoke.sh  seed_kayseri_pilot.py  smoke_accident_tow_link.py
naro-backend/tests/: conftest.py  test_approval_flow_pure.py  test_approval_terminal_guard_pure.py  test_billing_abandon_pure.py  test_billing_invariants_pure.py  test_billing_iyzico_webhook_pure.py  test_billing_orchestrator_pure.py  test_case_completion_pure.py  test_case_create_schema.py  test_case_create_service.py  test_case_documents_pure.py  test_case_dossier_pure.py  test_case_matching_pure.py  test_case_public_showcases_integration.py  test_case_public_showcases_pure.py  test_case_thread_pure.py  test_case_thread_service.py  test_health.py  test_list_cases_for_vehicle_excludes_deleted_pure.py  test_maintenance_detail_validator.py  test_maps_google.py  test_media_exif.py  test_media_policy.py  test_media_smoke.py  test_media_workers.py  test_offer_terminal_guard_pure.py  test_offers_appointments_pure.py  test_parts_approval_requires_description_pure.py  test_payment_core_pure.py  test_pr5_public_taxonomy.py  test_pr6_vehicles_pure.py  test_pr7_insurance_claims_pure.py  test_pr8_pool_reviews_pure.py  test_pr9_admin_pure.py  test_service_live_routes_pure.py  (+7 more)
(+936 files in other folders)
