[project]
name = "naro-backend"
version = "0.1.0"
description = "Naro platform backend — araç servis eşleştirme API'si"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "redis>=5.1.0",
    "arq>=0.26.0",
    "twilio>=9.3.0",
    "email-validator>=2.2.0",
    "structlog>=24.4.0",
    "boto3>=1.35.0",
    "pillow>=11.0.0",
    "geoalchemy2>=0.15.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",
    "itsdangerous>=2.2.0",
    "iyzipay>=1.0.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "types-python-jose",
    "types-passlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
# RUF001/002/003: Turkish ı/ğ/ş vb. ambiguous Unicode — codebase Türkçe docstring kullanıyor
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
